swagger doc for user CRUD
